--- a/work.css
+++ b/work.css
@@ -11,7 +11,7 @@ body {
 .main-container {
   max-width: 1152px;
   margin: 0 auto;
-  background-color: rgb(247, 245, 237);
+  background-color: rgb(248, 247, 242);
 }
 .nav-header {
   display: flex;
@@ -104,4 +104,33 @@ body {
   .work_meta {
     justify-content: center;
   }
+}
+
+/* footer section */
+.foot {
+  text-align: center;
+  padding: 10px;
+}
+
+.social-icons {
+  margin-top: 51px;
+  margin-bottom: 26px;
+}
+
+.social-icons a {
+  margin-right: 35px;
+  display: inline-block;
+}
+
+.social-icons i {
+  color: #2d2d2d;
+  font-size: 30px;
+}
+
+.foot p {
+  margin-top: 0px;
+  margin-right: 24px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 54px;
 }
