--- a/Blog.css
+++ b/Blog.css
@@ -48,15 +48,13 @@ body {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-  border-bottom: 2px solid #e0e0e0;
   padding-bottom: 20px;
   padding-left: 235px;
-
-  width: 681px;
-  top: 623px;
-  left: 236px;
-  border-width: 2px solid #e0e0e0;
 }
+
+/* .Blog_box:hover {
+  background-color: #f9f9f9;
+} */
 
 .Blog_details {
   flex: 1;
@@ -94,6 +92,8 @@ body {
   width: 682px;
   top: 937px;
   left: 235px;
+  padding-bottom: 17px;
+  border-bottom: 2px solid #e0e0e0;
 }
 
 /* footer section */
